Bring in second server

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,5 +1,6 @@
 MONGO_URL=mongodb://localhost:27017/socialmern
+SMTP_USERNAME=
 PASSWORD=
 USERNAME=
-JWT_SECRET=secret
+JWT_SECRET=secret123
 PORT=3001
